# cooplan-definition-schema-validator

./: Cargo.toml
src/: category_chain.rs  definition_type.rs  definition_value.rs  error.rs  lib.rs  schema_validator.rs  validations.rs
src/tests/: mod.rs  schema_validator_test.rs  validations_test.rs
tests/: schema_validator_test.rs  validations_test.rs
