[package]
name = "cooplan-definition-schema-validator"
version = "0.1.0"
edition = "2021"
description = "Validate JSON values against a definition"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cooplan-definitions-lib = "0.1.6"

serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"

log = "0.4.17"